--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20.1</version>
                 <configuration>
-                    <outputDirectory>${basedir}/target/test</outputDirectory>
+                    <parallel>methods</parallel>
+                    <threadCount>10</threadCount>
                 </configuration>
             </plugin>
             <plugin>
